homework1/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: hw1-service
  namespace: course-microservices
spec:
  selector:
    app: app-hw1
  ports:
    - port: 9000
      targetPort: web
  type: NodePort
