homework1/manifests/3-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: hw1-ingress
  namespace: course-microservices
spec:
  rules:
    - host: arch.homework
      http:
        paths:
          - backend:
              service:
                name: hw1-service
                port:
                  number: 80
            pathType: Prefix
            path: /
